bin/tests/snapshots/enable_blank_line__3d2c144cf383a10e9109be3cf2bafd9c_lint_errfmt.snap
---
source: bin/tests/enable_blank_line.rs
assertion_line: 7
---
{
  enable = true;
  enableCompletion = true;

  cdpath = "a";
}
---
