bin/tests/snapshots/enable_blank_line__8c1a43c11daf76315337dbd24df1d4a2_lint_errfmt.snap
---
source: bin/tests/enable_blank_line.rs
assertion_line: 7
---
{
  enable = true;

  # about nssmdns4
  nssmdns4 = true;
}
---
