bin/tests/snapshots/enable_blank_line__99355b0908169e3da2cb0c683dca21d6_lint_errfmt.snap
---
source: bin/tests/enable_blank_line.rs
assertion_line: 7
---
{
  enable = true;

  nssmdns4 = true;
}
---
