bin/tests/snapshots/enable_blank_line__a4301eeb9f406718b400402875d8c2a3_fix.snap
---
source: bin/tests/enable_blank_line.rs
assertion_line: 7
---
{
  enable = true;
  # about nssmdns4
  nssmdns4 = true;
}
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1,5 +1,6 @@
 {
   enable = true;
+
   # about nssmdns4
   nssmdns4 = true;
 }
