bin/tests/snapshots/enable_blank_line__a4301eeb9f406718b400402875d8c2a3_lint_errfmt.snap
---
source: bin/tests/enable_blank_line.rs
assertion_line: 7
---
{
  enable = true;
  # about nssmdns4
  nssmdns4 = true;
}
---
<temp_file_path>>2:3:W:32:[enable_blank_line] a blank line should separate this from what follows
