bin/tests/snapshots/enable_blank_line__debb67947b5a956b5c2cf9b01120ffe4_lint_stderr.snap
---
source: bin/tests/enable_blank_line.rs
assertion_line: 7
---
{
  nssmdns4 = true;
  openFirewall = true;
}
---
