bin/tests/snapshots/enable_blank_line__fb8f0567681657aa2773c71d50b13c4f_lint_json.snap
---
source: bin/tests/enable_blank_line.rs
assertion_line: 7
---
{ enable = true; nssmdns4 = true; }
---
